--- a/src/partials/search-pictures.html
+++ b/src/partials/search-pictures.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="search-form-container">
    <form class="search-form" id="search-form">
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit" class="form-btn">Search</button>
