--- a/src/partials/search-pictures.html
+++ b/src/partials/search-pictures.html
@@ -1,6 +1,6 @@
 <div class="search-form-container">
    <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <input type="text" class="form-input" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit" class="form-btn">Search</button>
    </form>
 </div>
