--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -65,9 +65,27 @@
 }
 
 .load-more {
-   display: block;
    margin: 0 auto;
    margin-bottom: 25px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   max-width: 150px;
+   padding: 10px;
+   font-family: inherit;
+   letter-spacing: 1.4px;
+   text-transform: uppercase;
+   color: #fff;
+   border-color: rgba(255, 255, 255, 0.305);
+   cursor: pointer;
+   background-color: rgba(0, 0, 0, 0.25);
+   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+   transition: border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   &:hover,
+   &:focus {
+      cursor: pointer;
+      transform: scale(1.2);
+   }
 }
 
 .gallery-text-item {
