--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -10,5 +10,30 @@
    gap: 10px;
    justify-content: center;
 }
+
+.form-input {
+   width: 250px;
+   height: 30px;
+}
+
 .form-btn {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   max-width: 88px;
+   font-family: inherit;
+   letter-spacing: 1.4px;
+   text-transform: uppercase;
+   color: rgba(255, 255, 255, 0.621);
+   border-color: rgba(255, 255, 255, 0.679);
+   cursor: pointer;
+   background-color: rgba(0, 0, 0, 0.25);
+
+   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+   transition: border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   &:hover,
+   &:focus {
+      cursor: pointer;
+      transform: scale(1.2);
+   }
 }
