--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,10 +1,11 @@
 <section>
   <div class="gallety-container">
-    <ul class="gallery"></ul>
+    <ul class="gallery">
+
+    </ul>
     <div class="gallery-content-box">
       <button type="button" class="load-more is-hidden">Load more</button>
       <p class="gallery-text-item is-hidden">We're sorry, but you've reached the end of search results</p>
     </div>
-
   </div>
 </section>
