--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -23,11 +23,14 @@
 }
 
 .photo-card {
+   position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    object-fit: cover;
    overflow: hidden;
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
    @media screen and (max-width: 767px) {
       width: 300px;
       height: 200px;
@@ -36,11 +39,18 @@
       width: 450px;
       height: 300px;
    }
+
+   &:hover .info {
+      transform: scale(1);
+      transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      transform: translate(0px, 0px);
+   }
 }
 
 .gallery-img {
    @media screen and (max-width: 767px) {
-      width: 300px;
+      width: 100%;
       height: 200px;
    }
    @media screen and (min-width: 768px) {
@@ -50,18 +60,29 @@
 }
 
 .info {
+   display: none;
+   position: absolute;
+   opacity: 1;
    display: flex;
    justify-content: center;
-   display: none;
+   width: 100%;
+   background-color: rgba(55, 52, 52, 0.548);
+   transform: translate(0px, 60px);
+   @media screen and (max-width: 767px) {
+      gap: 10px;
+      top: 70%;
+   }
+   @media screen and (min-width: 768px) {
+      gap: 20px;
+      top: 80%;
+   }
 }
 
 .info-item {
    display: flex;
    flex-direction: column;
    align-items: center;
-}
-
-.gallery-content-box {
+   gap: 5px;
 }
 
 .load-more {
@@ -80,17 +101,29 @@
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.25);
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-   transition: border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   &:hover,
-   &:focus {
-      cursor: pointer;
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@keyframes btn-animation {
+   0% {
+      transform: scale(1);
+   }
+   20% {
       transform: scale(1.2);
    }
+   100% {
+      transform: scale(1.3);
+   }
+}
+
+.load-more:active {
+   animation: btn-animation 1s ease-out;
 }
 
 .gallery-text-item {
    display: block;
-   margin: 0 auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
    margin-bottom: 25px;
 }
 .is-hidden {
