--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -12,8 +12,14 @@
 }
 
 .form-input {
-   width: 250px;
-   height: 30px;
+   @media screen and (max-width: 767px) {
+      width: 200px;
+      height: 25px;
+   }
+   @media screen and (min-width: 768px) {
+      width: 250px;
+      height: 30px;
+   }
 }
 
 .form-btn {
@@ -28,12 +34,21 @@
    border-color: rgba(255, 255, 255, 0.679);
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.25);
-
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-   transition: border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   &:hover,
-   &:focus {
-      cursor: pointer;
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@keyframes btn-animation {
+   0% {
+      transform: scale(1);
+   }
+   20% {
       transform: scale(1.2);
    }
+   100% {
+      transform: scale(1.3);
+   }
+}
+.form-btn:active {
+   animation: btn-animation 1s ease-out;
 }
