--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -13,7 +13,7 @@
 
 .form-input {
    @media screen and (max-width: 767px) {
-      width: 200px;
+      max-width: 200px;
       height: 25px;
    }
    @media screen and (min-width: 768px) {
